# 2048-Game-With-Rust

./: Cargo.toml  README.md  index.html
pkg/: game_2048.d.ts  game_2048.js  game_2048_bg.wasm  game_2048_bg.wasm.d.ts  package.json
src/: lib.rs
src/application/: game_service.rs  mod.rs
src/domain/: board.rs  direction.rs  mod.rs
src/infra/: mod.rs  render2d.rs  wasm_bindings.rs
