[package]
name = "game_2048"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
  "EventTarget",
  "KeyboardEvent",
  "Performance"
] }
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
